// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test making the accordion control invisible 1`] = `
<ul
  className="ui-accordion accordion normal test-class invisible"
  style={Object {}}
>
  <li>
    some list item
  </li>
</ul>
`;

exports[`Test retrieval of Accordion props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "children": null,
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "visible": true,
  "width": "",
}
`;

exports[`Test the creation of a Accordion control container 1`] = `
<ul
  className="ui-accordion accordion normal test-class"
  style={Object {}}
>
  <li>
    some list item
  </li>
</ul>
`;

exports[`Test the disabling of the Accordion control container 1`] = `
<ul
  className="ui-accordion accordion normal test-class disabled nohover"
  style={Object {}}
>
  <li>
    some list item
  </li>
</ul>
`;
